--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   "devDependencies": {
     "@gabliam/core": "^1.4.0",
     "@types/express": "^4.0.35",
+    "@types/reflect-metadata": "^0.0.5",
     "express": "^4.14.1",
     "reflect-metadata": "^0.1.10",
     "rimraf": "^2.6.1",
