--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "@gabliam/rest",
-  "version": "1.5.1",
+  "version": "1.5.3",
   "description": "",
   "main": "lib/index.js",
   "typings": "lib/index.d.ts",
   "module": "lib/index.js",
   "scripts": {
     "build": "rimraf lib && tsc",
+    "prepublish": "npm run lint && npm run build",
     "lint": "tslint src/**/*.ts && tslint 'src/**/*.ts'",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
