--- a/package.json
+++ b/package.json
@@ -26,13 +26,14 @@
   },
   "homepage": "https://github.com/gabliam/rest#readme",
   "peerDependencies": {
-    "@gabliam/core": "^1.4.0"
+    "@gabliam/core": "^1.6.0"
   },
   "devDependencies": {
-    "@gabliam/core": "^1.4.0",
+    "@gabliam/core": "^1.6.0",
     "@types/express": "^4.0.35",
     "@types/reflect-metadata": "^0.0.5",
     "express": "^4.14.1",
+    "joi": "^10.2.2",
     "reflect-metadata": "^0.1.10",
     "rimraf": "^2.6.1",
     "tslint": "^4.4.2",
